--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "rn-divide",
   "version": "0.0.1",
   "private": false,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/main.js",
+  "types": "./dist/main.d.ts",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
