--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-divide",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "private": false,
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
@@ -9,18 +9,19 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "build": "rimraf ./dist; tsc"
   },
   "dependencies": {
-    "@liuyunjs/utils": "^1.0.0"
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "@liuyunjs/utils": "^1.0.0",
+    "rn-darkly": "^0.0.3"
   },
   "peerDependencies": {
     "react": "17.0.1",
     "react-native": "0.64.1"
   },
   "devDependencies": {
-    "react": "17.0.1",
-    "react-native": "0.64.1",
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
@@ -31,7 +32,10 @@
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "react": "17.0.1",
+    "react-native": "0.64.1",
     "react-test-renderer": "17.0.1",
+    "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
   },
   "resolutions": {
