--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "build": "rimraf ./dist; tsc"
+    "build": "rimraf ./dist; tsc",
+    "prepublishOnly": "yarn build"
   },
   "dependencies": {
     "@liuyunjs/utils": "^1.0.0",
