--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "rn-divide",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "private": false,
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
   "scripts": {
-    "build": "rimraf ./dist; tsc",
+    "build": "rimraf ./dist; rollup -c rollup.config.js",
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "@liuyunjs/utils": "^1.0.0",
-    "rn-darkly": "^1.0.2"
+    "@liuyunjs/utils": "^1",
+    "rn-darkly": "^2"
   },
   "peerDependencies": {
     "react": "17.0.1",
@@ -31,6 +31,8 @@
     "react-native": "0.64.1",
     "react-test-renderer": "17.0.1",
     "rimraf": "^3.0.2",
-    "typescript": "^3.8.3"
+    "rollup": "^2.74.1",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "typescript": "^4.7.2"
   }
 }
